--- a/requirements.txt
+++ b/requirements.txt
@@ -1,193 +1,61 @@
-aiofiles==24.1.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.12
-aiosignal==1.3.2
-altair==5.5.0
-altgraph==0.17.4
-annotated-types==0.7.0
-anyio==4.9.0
-asgiref==3.8.1
-attrs==25.3.0
-backoff==2.2.1
-bcrypt==4.3.0
-beautifulsoup4==4.13.4
-blinker==1.9.0
-build==1.2.2.post1
-cachetools==5.5.2
-certifi==2025.4.26
-cffi==1.17.1
+attrs==23.2.0
+Automat==22.10.0
+Babel==2.10.3
+bcrypt==3.2.2
+blinker==1.7.0
+certifi==2023.11.17
 chardet==5.2.0
-charset-normalizer==3.4.2
-chromadb==1.0.12
-click==8.2.1
-coloredlogs==15.0.1
-cryptography==45.0.4
-dataclasses-json==0.6.7
+click==8.1.6
+cloud-init==25.1.2
+colorama==0.4.6
+command-not-found==0.3
+configobj==5.0.8
+constantly==23.10.4
+cryptography==41.0.7
+dbus-python==1.3.2
 distro==1.9.0
-docx2txt==0.9
-durationpy==0.10
-emoji==2.14.1
-et_xmlfile==2.0.0
-faiss-cpu==1.11.0
-fastapi==0.115.9
-filelock==3.18.0
-filetype==1.2.0
-flatbuffers==25.2.10
-frozenlist==1.7.0
-fsspec==2025.5.1
-gitdb==4.0.12
-GitPython==3.1.44
-google-auth==2.40.3
-googleapis-common-protos==1.70.0
-greenlet==3.2.3
-grpcio==1.73.0
-h11==0.16.0
-hf-xet==1.1.3
-html5lib==1.1
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.33.0
-humanfriendly==10.0
-idna==3.10
-importlib_metadata==8.7.0
-importlib_resources==6.5.2
-Jinja2==3.1.6
-jiter==0.10.0
-joblib==1.5.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.24.0
-jsonschema-specifications==2025.4.1
-kubernetes==33.1.0
-langchain==0.3.25
-langchain-community==0.3.25
-langchain-core==0.3.65
-langchain-text-splitters==0.3.8
-langdetect==1.0.9
-langsmith==0.3.45
-lxml==5.4.0
+distro-info==1.7+build1
+httplib2==0.20.4
+hyperlink==21.0.0
+idna==3.6
+incremental==22.10.0
+Jinja2==3.1.2
+jsonpatch==1.32
+jsonpointer==2.0
+jsonschema==4.10.3
+launchpadlib==1.11.0
+lazr.restfulclient==0.14.6
+lazr.uri==1.0.6
 markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-marshmallow==3.26.1
+MarkupSafe==2.1.5
 mdurl==0.1.2
-mmh3==5.1.0
-mpmath==1.3.0
-multidict==6.4.4
-mypy_extensions==1.1.0
-narwhals==1.42.0
-nest-asyncio==1.6.0
-networkx==3.5
-nltk==3.9.1
-numpy==2.3.0
-nvidia-cublas-cu12==12.6.4.1
-nvidia-cuda-cupti-cu12==12.6.80
-nvidia-cuda-nvrtc-cu12==12.6.77
-nvidia-cuda-runtime-cu12==12.6.77
-nvidia-cudnn-cu12==9.5.1.17
-nvidia-cufft-cu12==11.3.0.4
-nvidia-cufile-cu12==1.11.1.6
-nvidia-curand-cu12==10.3.7.77
-nvidia-cusolver-cu12==11.7.1.2
-nvidia-cusparse-cu12==12.5.4.2
-nvidia-cusparselt-cu12==0.6.3
-nvidia-nccl-cu12==2.26.2
-nvidia-nvjitlink-cu12==12.6.85
-nvidia-nvtx-cu12==12.6.77
+netifaces==0.11.0
 oauthlib==3.2.2
-olefile==0.47
-onnxruntime==1.22.0
-openai==1.86.0
-openpyxl==3.1.5
-opentelemetry-api==1.34.1
-opentelemetry-exporter-otlp-proto-common==1.34.1
-opentelemetry-exporter-otlp-proto-grpc==1.34.1
-opentelemetry-instrumentation==0.55b1
-opentelemetry-instrumentation-asgi==0.55b1
-opentelemetry-instrumentation-fastapi==0.55b1
-opentelemetry-proto==1.34.1
-opentelemetry-sdk==1.34.1
-opentelemetry-semantic-conventions==0.55b1
-opentelemetry-util-http==0.55b1
-orjson==3.10.18
-overrides==7.7.0
-packaging==24.2
-pandas==2.3.0
-pillow==11.2.1
-posthog==4.7.0
-propcache==0.3.2
-protobuf==5.29.5
-psutil==7.0.0
-pyarrow==20.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.11.5
-pydantic-settings==2.9.1
-pydantic_core==2.33.2
-pydeck==0.9.1
-Pygments==2.19.1
-pyinstaller==6.14.1
-pyinstaller-hooks-contrib==2025.5
-pypdf==5.6.0
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-python-iso639==2025.2.18
-python-magic==0.4.27
-python-oxmsg==0.0.2
-pytz==2025.2
-PyYAML==6.0.2
-RapidFuzz==3.13.0
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.4
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==14.0.0
-rpds-py==0.25.1
-rsa==4.9.1
-safetensors==0.5.3
-scikit-learn==1.7.0
-scipy==1.15.3
-sentence-transformers==4.1.0
-setuptools==80.9.0
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-soupsieve==2.7
-SQLAlchemy==2.0.41
-starlette==0.45.3
-streamlit==1.45.1
-sympy==1.14.0
-tenacity==9.1.2
-threadpoolctl==3.6.0
-tokenizers==0.21.1
-toml==0.10.2
-torch==2.7.1
-tornado==6.5.1
-tqdm==4.67.1
-transformers==4.52.4
-triton==3.3.1
-typer==0.16.0
-typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.14.0
-tzdata==2025.2
-unstructured==0.17.2
-unstructured-client==0.36.0
-urllib3==2.4.0
-uvicorn==0.34.3
-uvloop==0.21.0
-watchdog==6.0.0
-watchfiles==1.0.5
-webencodings==0.5.1
-websocket-client==1.8.0
-websockets==15.0.1
-wrapt==1.17.2
-yarl==1.20.1
-zipp==3.23.0
-zstandard==0.23.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycurl==7.45.3
+Pygments==2.17.2
+PyGObject==3.48.2
+PyHamcrest==2.1.0
+PyJWT==2.7.0
+pyOpenSSL==23.2.0
+pyparsing==3.1.1
+pyrsistent==0.20.0
+pyserial==3.5
+python-apt==2.7.7+ubuntu4
+pytz==2024.1
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.7.1
+service-identity==24.1.0
+setuptools==68.1.2
+six==1.16.0
+systemd-python==235
+Twisted==24.3.0
+typing_extensions==4.10.0
+ubuntu-pro-client==8001
+unattended-upgrades==0.1
+urllib3==2.0.7
+wadllib==1.3.6
+wheel==0.42.0
+zope.interface==6.1
